# SteinsOS

./: .gdbinit  .gitignore  LICENSE  Makefile  README.md
kernel/: Cargo.toml  kernel.ld
kernel/.cargo/: config
kernel/src/: common.rs  exception.rs  gic.rs  lib.rs  serial.rs  virtio.rs
kernel/src/asm/: back_to_userspace.S  exception_vector.S  init.S  startup.S  switch.S
kernel/src/fs/: buffer.rs  file.rs  inode.rs  mod.rs  superblock.rs
kernel/src/mm/: buddyallocator.rs  buddylist.rs  mod.rs  slaballocator.rs
kernel/src/process/: elf.rs  mod.rs
kernel/src/syscall/: mod.rs
kernel/src/vm/: mod.rs
mkfs/: Cargo.toml
mkfs/src/: inode.rs  main.rs  superblock.rs
user/: cat.c  crt.S  ge.c  libc.c  libc.h  ls.c  malloc.c  mkdir.c  pwd.c  sh.c  shell.c
