[package]
name = "steinsos"
version = "0.1.0"
edition = "2018"

[lib]
path = "src/lib.rs"
crate-type = ["staticlib"]

[dependencies]
spin = "0.9.2"
bitflags = "1.2.1"

# https://github.com/avr-rust/blink/issues/25
[profile.dev]
opt-level = "s"
debug = true
debug-assertions = false
overflow-checks = false
lto = false
panic = "abort"